syntax = "proto2";

package vm_scheduler.proto;

import "proto/structures/job.proto";
import "proto/structures/task.proto";


message JobState {
  required JobStatus status = 1;
}

message TaskState {
  required TaskStatus status = 1;
  repeated JobState job_states = 2;
}
